Integrate FX framework for gateway
