# docs/openapi.yml
@@ -4,10 +4,10 @@ info:
   description: The REST Full API specification for the Fiagram project
   version: 0.0.0
 servers:
-  - url: https://fiagram.com/api/v1
+  - url: http://fiagram.com/api/v1
     description: Production server
 
-  - url: https://localhost:8080/api/v1
+  - url: http://localhost:8080/api/v1
     description: Local development
 
 tags:
@@ -52,6 +52,7 @@ paths:
 
         "500": { $ref: "#/components/responses/500_InternalServerError" }
         "400": { $ref: "#/components/responses/400_BadRequest" }
+        "404": { $ref: "#/components/responses/404_NotFound" }
 
   /auth/signin:
     post:
@@ -83,6 +84,7 @@ paths:
         "400": { $ref: "#/components/responses/400_BadRequest" }
         "401": { $ref: "#/components/responses/401_Unauthorized" }
         "429": { $ref: "#/components/responses/429_TooManyRequests" }
+        "404": { $ref: "#/components/responses/404_NotFound" }
 
   /auth/refresh:
     post:
@@ -112,10 +114,9 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/RefreshResponse"
-        "400":
-          $ref: "#/components/responses/400_BadRequest"
-        "401":
-          $ref: "#/components/responses/401_Unauthorized"
+        "400": { $ref: "#/components/responses/400_BadRequest" }
+        "401": { $ref: "#/components/responses/401_Unauthorized" }
+        "404": { $ref: "#/components/responses/404_NotFound" }
 
   /auth/signout:
     post:
@@ -143,10 +144,9 @@ paths:
       responses:
         "204":
           description: Signed out successfully
-        "400":
-          $ref: "#/components/responses/400_BadRequest"
-        "401":
-          $ref: "#/components/responses/401_Unauthorized"
+        "400": { $ref: "#/components/responses/400_BadRequest" }
+        "401": { $ref: "#/components/responses/401_Unauthorized" }
+        "404": { $ref: "#/components/responses/404_NotFound" }
 
   # -------------------------------- Users
   /users/me:
@@ -163,10 +163,9 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UsersMeResponse"
-        "401":
-          $ref: "#/components/responses/401_Unauthorized"
-        "403":
-          $ref: "#/components/responses/403_Forbidden"
+        "401": { $ref: "#/components/responses/401_Unauthorized" }
+        "403": { $ref: "#/components/responses/403_Forbidden" }
+        "404": { $ref: "#/components/responses/404_NotFound" }
 components:
   securitySchemes:
     bearerAuth:
@@ -344,10 +343,6 @@ components:
           type: string
           description: JWT access token (store in memory; avoid localStorage if possible)
           example: eyJhbGciOi...
-        tokenType:
-          type: string
-          enum: [Bearer]
-          default: Bearer
         expiresIn:
           type: integer
           minimum: 1
